--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@ footer {
     <a href="#projects">My Work</a>
     <a href="#blog">Blog</a>
     <a href="#contact">Contact</a>
-    <a href="resume.pdf" target="_blank" style="color: var(--accent);">Resume ↓</a>
+    <a href="resume.pdf" target="_blank" rel="noopener noreferrer" style="color: var(--accent);">Resume ↓</a>
   </div>
 </nav>
 
@@ -1119,8 +1119,10 @@ document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
 // Smooth nav highlight
 document.querySelectorAll('.nav-links a').forEach(link => {
   link.addEventListener('click', (e) => {
+    const href = link.getAttribute('href');
+    if (!href.startsWith('#')) return;
     e.preventDefault();
-    const target = document.querySelector(link.getAttribute('href'));
+    const target = document.querySelector(href);
     if (target) target.scrollIntoView({ behavior: 'smooth' });
   });
 });
